# payroll-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  snowflake_setup.md
airflow/dags/: payroll_dag.py
airflow/scripts/: extractors.py  process.py  processors.py
assets/diagrams/: payroll.drawio
config/: airflow.cfg
dbt_payroll/: .user.yml  dbt_project.yml  profiles.yml
dbt_payroll/macros/: overwrite_generate_schema_name.sql
dbt_payroll/models/landing/: sources.yml
dbt_payroll/models/marts/dim/: dim_contracts.sql  dim_employees.sql  dim_holidays.sql  dim_junior_pay_rates.sql  dim_minimum_pay_rates.sql  dim_pay_periods.sql  dim_pay_rate_adjustments.sql  dim_super_guarantee_rates.sql  dim_tax_rates.sql
dbt_payroll/models/marts/fact/: fact_allowances.sql  fact_bonuses.sql  fact_employee_leaves.sql  (+4 more)
dbt_payroll/models/staging/: stg_allowance.sql  stg_allowances.sql  stg_bonus.sql  stg_bonuses.sql  stg_contracts.sql  stg_employee_leaves.sql  stg_employees.sql  stg_holidays.sql  stg_junior_pay_rates.sql  stg_minimum_pay_rates.sql  stg_past_payslips.sql  stg_pay_period.sql  stg_pay_periods.sql  stg_pay_rate_adjustments.sql  stg_roster.sql  stg_super_guarantee_rates.sql  stg_tax_rates.sql  stg_time_off_in_lieu.sql  stg_timesheet.sql
dbt_payroll/seeds/: dim_dates.csv
dbt_payroll/snapshots/: scd_contracts.sql  scd_employees.sql
docker/airflow/: Dockerfile  requirements.txt
docker/postgres/: init.sql
docker/spark-app/: Dockerfile  load.py  loaders.py
docker/spark-master/: Dockerfile
docker/spark-worker/: Dockerfile
