[project]
name = "payroll-project-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.0.1",
    "boto3>=1.38.19",
    "duckdb>=1.2.2",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyspark>=3.5.5",
]
