[project]
name = "payroll-project-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.0",
    "boto3>=1.38.21",
    "dbt-core>=1.9.4",
    "dbt-snowflake>=1.9.4",
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyspark>=3.5.5",
]
